# kioskwm

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: release.yml
docs/: index.html
install/: install.sh
src/: apps.rs  backdrop.rs  console_backdrop.rs  cursor.rs  emergency.rs  env_detect.rs  font8x8.rs  hardware_bridge.rs  hardware_poll.rs  i18n.rs  input.rs  kill_switch.rs  main.rs  modifiers.rs  overlay.rs  parent_shortcuts.rs  perf.rs  render.rs  spawn.rs  state.rs  tty.rs  winit_backend.rs  x11.rs
src/alt_tab/: input.rs  layout.rs  mod.rs  render.rs
src/context_menu/: control.rs  input.rs  layout.rs  mod.rs  render.rs
src/settings/: actions.rs  icon.rs  input.rs  layout.rs  mod.rs  raster.rs  render.rs  slider.rs  text.rs  theme.rs
