[package]
name = "kioskwm"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay = { version = "0.7.0", features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "desktop",
    "renderer_gl",
    "use_system_lib",
] }
wayland-protocols = { version = "0.32", features = ["server"] }
wayland-server = "0.31"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
winit = "0.30"
xkbcommon = "0.8"
calloop = { version = "0.14", features = ["signals"] }
xcursor = "0.3"
libc = "0.2"
